# cf-llm-finetune

./: DATASET.md  Justfile  Pipfile  README.md  TRAIN.md  pyproject.toml  uv.toml
config/: llama-3.2-3b-lora.yml
src/: batch_generation.py  code_runner.py  dataset.py  evaluate_responses.py  generate.py  generate_evaluation_table.py  generate_openai.py  generate_transformers.py  logger.py  model.py  postprocess.py  prompt.py  simple_test.py  transform_dataset.py  utils.py
