[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8", "packaging==23.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-llm-finetune"
version = "0.1.0"
description = "Codeforces LLM Finetune"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "packaging",
  "setuptools",
  "wheel",
  "torch==2.6.0",
  "transformers",
  "requests",
  "pandas",
  "datasets",
  "huggingface-hub",
  "joblib",
  "openai",
  "scikit-learn",
  "pydantic",
  "axolotl[deepspeed]"
]

[dependency-groups]
dev = [
  "ipykernel",
  "isort",
  "black",
  "autoflake"
]

[project.urls]
Homepage = "https://github.com/DemoVersion/cf-llm-finetune/"
Repository = "https://github.com/DemoVersion/cf-llm-finetune/"

[tool.uv]
no-build-isolation = true

